# netconf_ctf

./: Makefile  README.md
challenges/10_delete/: install_modules_and_data.sh  model_chall_10.yang  nacm.xml  startup_data.xml  supervisord.conf
challenges/10_delete/10_delete_sw/: CMakeLists.txt  main.cpp
challenges/11_notif_schema/: install_modules_and_data.sh  model_chall_11.yang  supervisord.conf
challenges/11_notif_schema/11_notif_schema_sw/: CMakeLists.txt  main.cpp
challenges/12_nacm/: install_modules_and_data.sh  model_chall_12.yang  nacm.xml  supervisord.conf
challenges/12_nacm/12_nacm_sw/: CMakeLists.txt  main.cpp
challenges/1_intro_get/: install_modules_and_data.sh  nacm.xml  supervisord.conf
challenges/1_intro_get/1_intro_get_sw/: CMakeLists.txt  main.cpp
challenges/2_get_filter/: install_modules_and_data.sh  model_chall_2_2.yang  supervisord.conf
challenges/2_get_filter/2_get_filter_sw/: CMakeLists.txt  main.cpp
challenges/3_edit_config/: install_modules_and_data.sh  model_chall_3.yang  nacm.xml  supervisord.conf
challenges/3_edit_config/3_edit_config_sw/: CMakeLists.txt  main.cpp
challenges/4_rpc/: install_modules_and_data.sh  model_chall_4.yang  nacm.xml  supervisord.conf
challenges/4_rpc/4_rpc_sw/: CMakeLists.txt  main.cpp
challenges/5_notif/: install_modules_and_data.sh  model_chall_5.yang  nacm.xml  supervisord.conf
challenges/5_notif/5_notif_sw/: CMakeLists.txt  main.cpp
challenges/6_get_out/: install_modules_and_data.sh  model_chall_6.yang  nacm.xml  supervisord.conf
challenges/6_get_out/6_get_out_sw/: CMakeLists.txt  main.cpp
challenges/7_update/: install_modules_and_data.sh  model_chall_7.yang  nacm.xml  startup_data.xml  supervisord.conf
challenges/7_update/7_update_sw/: CMakeLists.txt  main.cpp
challenges/8_set_full_object/: install_modules_and_data.sh  model_chall_8.yang  nacm.xml  supervisord.conf
challenges/8_set_full_object/8_set_full_object_sw/: CMakeLists.txt  main.cpp
challenges/9_leafref/: install_modules_and_data.sh  model_chall_9.yang  nacm.xml  startup_data.xml  supervisord.conf
challenges/9_leafref/9_leafref_sw/: CMakeLists.txt  main.cpp
common/: entrypoint.py  ietf-netconf-server.xml
deploy/challenges/: Dockerfile
deploy/cli/: Dockerfile  connect_to_server.py
deploy/compose/: docker-compose.yml
